# TMS_Backend

./: pyproject.toml  readme
backend/apps/audits/: apps.py  models.py
backend/apps/audits/migrations/: 0001_initial.py  0002_auditlog.py
backend/apps/notifications/: models.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/tasks/: admin.py  constants.py  models.py  permissions.py  urls.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_taskhistory.py  0003_task_priority_escalated.py
backend/apps/tasks/serializers/: bulk_update.py  task.py
backend/apps/tasks/services/: analytics.py  bulk_update.py  history_logger.py  priority_escalation.py  status_cascade.py
backend/apps/tasks/views/: analytics.py  bulk.py  task_viewset.py
backend/apps/users/: admin.py  authentication.py  models.py  urls.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/serializers/: auth.py
backend/apps/users/services/: tokens.py
backend/apps/users/views/: auth.py  me.py
backend/common/: rate_limits.py
backend/common/middleware/: audit.py  auto_refresh_token.py  ip_whitelist.py  priority_escalation.py  rate_limit.py  smart_security.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py
